--- a/03_styles/css/style.css
+++ b/03_styles/css/style.css
@@ -1,4 +1,10 @@
 @import url(reset.css);
 body {
-    background-color:gray;
+    background-color:lightgray;
+}
+.colored {
+    width: 300px;
+    height: 300px;
+    background-color: navy;
+    ;
 }
